// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/helpers/formatter formatPublicInfo 1`] = `
Object {
  "resources": Array [
    Object {
      "id": "e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
      "isAvialableForVideoPlayer": false,
      "isFirstPortionLoaded": false,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
          "public_resource": "4003079057:e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
        },
        "file_id": "e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
        "hasPreview": false,
        "short_url": "https://yadi.sk/d/3wMPH8ob3KKMBa",
        "views_counter": 11,
      },
      "modified": 1519729355,
      "name": "Test Public Dir",
      "path": undefined,
      "timestamp": 1537190300000,
      "type": "dir",
      "uid": "4003079057",
      "virus": false,
    },
  ],
  "users": Array [
    Object {
      "displayName": "km256",
      "paid": 0,
      "uid": "4003079057",
    },
  ],
}
`;

exports[`app/helpers/formatter formatResource для АнтиФО ресурса 1`] = `
Object {
  "hash": "AYfvfgSPPj4ZKKlFc8w8sefDFfG+TFEwcbmfzqfoLTo==",
  "id": "f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
  "isAvialableForVideoPlayer": false,
  "meta": Object {
    "antiFileSharing": true,
    "comment_ids": Object {
      "private_resource": "4004250101:f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
      "public_resource": "4004250101:f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
    },
    "download_counter": 7,
    "drweb": 1,
    "ext": "xlsx",
    "file_id": "f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
    "hasPreview": false,
    "mediatype": "document",
    "mimetype": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
    "short_url": "https://yadi.sk/d/ZZcyTPLn3LsCpQ",
    "size": 39427,
    "views_counter": 0,
  },
  "modified": 1476699678,
  "name": "example.xlsx",
  "path": undefined,
  "timestamp": 1537190300000,
  "type": "file",
  "uid": "4004250101",
  "virus": false,
}
`;

exports[`app/helpers/formatter formatResource для вируса 1`] = `
Object {
  "hash": "AYfvfgSPPj4ZKKlFc8w8sefDFfG+TFEwcbmfzqfoLTo==",
  "id": "f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
  "isAvialableForVideoPlayer": false,
  "meta": Object {
    "comment_ids": Object {
      "private_resource": "4004250101:f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
      "public_resource": "4004250101:f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
    },
    "download_counter": 7,
    "drweb": 2,
    "ext": "xlsx",
    "file_id": "f205f58df33cb1c1ad0baf458521a9ff2853369d4ee1385e21d195cf40bbec1d",
    "hasPreview": false,
    "mediatype": "document",
    "mimetype": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
    "short_url": "https://yadi.sk/d/ZZcyTPLn3LsCpQ",
    "size": 39427,
    "views_counter": 0,
  },
  "modified": 1476699678,
  "name": "example.xlsx",
  "path": undefined,
  "timestamp": 1537190300000,
  "type": "file",
  "uid": "4004250101",
  "virus": true,
}
`;

exports[`app/helpers/formatter formatResource для папки 1`] = `
Object {
  "id": "e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
  "isAvialableForVideoPlayer": false,
  "isFirstPortionLoaded": false,
  "meta": Object {
    "comment_ids": Object {
      "private_resource": "4003079057:e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
      "public_resource": "4003079057:e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
    },
    "file_id": "e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
    "hasPreview": false,
    "short_url": "https://yadi.sk/d/3wMPH8ob3KKMBa",
    "views_counter": 11,
  },
  "modified": 1519729355,
  "name": "Test Public Dir",
  "path": undefined,
  "timestamp": 1537190300000,
  "type": "dir",
  "virus": false,
}
`;

exports[`app/helpers/formatter formatResource для ресурса 1`] = `
Object {
  "hash": "Pc+MIothz8JeA0GSIWCiaTEkpSklOGg2AA4YZsoYCo=",
  "id": "a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
  "isAvialableForVideoPlayer": false,
  "meta": Object {
    "comment_ids": Object {
      "private_resource": "4004250101:a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
      "public_resource": "4004250101:a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
    },
    "defaultPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2",
    "drweb": 1,
    "ext": "png",
    "file_id": "a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
    "hasPreview": true,
    "lPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=L&crop=0",
    "mediatype": "image",
    "mimetype": "image/png",
    "original": "https://downloader.dst.yandex.net/disk/13180cccd85f6ed0e5f946208ad6eab7e47790b5c6bfca49c83e94707bced102/5aa7e476/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077wqIboSHCDhLAVhc9L5kPD7s6lNW7_5TnRYE9a4brEQYw%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&fsize=1943&hid=e7c8e48b8ac88cf598b3f0162fcc24b1&media_type=image&tknv=v2&etag=9a4155df4b1a1f6227342ca3d6054756",
    "short_url": "https://yadi.sk/i/xjDB6rfZ3SDXx6",
    "size": 1943,
    "views_counter": 33,
    "xxxlPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=XXXL&crop=0",
  },
  "modified": 1520933597,
  "name": "\\"<title><img src=x onerror=alert(1)>.png",
  "path": undefined,
  "timestamp": 1537190300000,
  "type": "file",
  "uid": "4004250101",
  "virus": false,
}
`;

exports[`app/helpers/formatter formatResource для ресурса, c размером картинки 1`] = `
Object {
  "hash": "Pc+MIothz8JeA0GSIWCiaTEkpSklOGg2AA4YZsoYCo=",
  "id": "a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
  "isAvialableForVideoPlayer": false,
  "meta": Object {
    "comment_ids": Object {
      "private_resource": "4004250101:a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
      "public_resource": "4004250101:a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
    },
    "defaultPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2",
    "drweb": 1,
    "ext": "png",
    "file_id": "a163ea9cfee5cf53952a7fff0a26d7dd58dd4cabb87af45dfff49e4af72a6f05",
    "hasPreview": true,
    "lPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=L&crop=0",
    "mediatype": "image",
    "mimetype": "image/png",
    "original": "https://downloader.dst.yandex.net/disk/13180cccd85f6ed0e5f946208ad6eab7e47790b5c6bfca49c83e94707bced102/5aa7e476/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077wqIboSHCDhLAVhc9L5kPD7s6lNW7_5TnRYE9a4brEQYw%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&fsize=1943&hid=e7c8e48b8ac88cf598b3f0162fcc24b1&media_type=image&tknv=v2&etag=9a4155df4b1a1f6227342ca3d6054756",
    "short_url": "https://yadi.sk/i/xjDB6rfZ3SDXx6",
    "size": 1943,
    "views_counter": 33,
    "xxlPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=XXL&crop=0",
    "xxxlPreview": "https://downloader.dst.yandex.net/preview/5024576768b6e899075c6499c2d3f84d19a65cf2d9540c2042659532bdf8dbad/inf/G-mOq4IGM5OejoMdg-m-4Qd-uf_AERFvWES5D2P077zL896sNfJd79HCg4r73n6IxfIT8NHOI0m8Z56nhapL0A%3D%3D?uid=0&filename=%22%3Ctitle%3E%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=XXXL&crop=0",
  },
  "modified": 1520933597,
  "name": "\\"<title><img src=x onerror=alert(1)>.png",
  "path": undefined,
  "timestamp": 1537190300000,
  "type": "file",
  "uid": "4004250101",
  "virus": false,
}
`;

exports[`app/helpers/formatter formatResourcesList 1`] = `
Object {
  "completed": false,
  "resources": Array [
    Object {
      "completed": false,
      "countBlockedItems": 0,
      "id": "e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
      "isAvialableForVideoPlayer": false,
      "isFirstPortionLoaded": true,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
          "public_resource": "4003079057:e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
        },
        "file_id": "e574d5e59a3452adc6ed51bb5488f07876c5bbbe101940956ab628efea3974a7",
        "hasPreview": false,
        "short_url": "https://yadi.sk/d/3wMPH8ob3KKMBa",
        "views_counter": 25,
      },
      "modified": 1519729355,
      "name": "Test Public Dir",
      "path": "/+dWODt1e4HskzD1QFVevBqJzbZ7bbHr4F3iI95rlqk=:",
      "timestamp": 1537190300000,
      "type": "dir",
      "virus": false,
    },
    Object {
      "id": "4ef1796ff0d09cfb75eaec0e461c70d8e8546d42e71c551c271e807532572c21",
      "isAvialableForVideoPlayer": false,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:4ef1796ff0d09cfb75eaec0e461c70d8e8546d42e71c551c271e807532572c21",
          "public_resource": "4003079057:4ef1796ff0d09cfb75eaec0e461c70d8e8546d42e71c551c271e807532572c21",
        },
        "defaultPreview": "https://downloader.dst.yandex.net/preview/e098ee306c70f6c78c4839661aea7729da501971cfb5c0546a9edae4b061eb3b/inf/JtTECruX-ndLWCGMGlDA2e96lfCS9zRMCH9ce3IL8RlW7IdRSVJQfgIuZRQIofktVAAbQ-QLM3EI9yO9rX5B4g%3D%3D?uid=0&filename=080.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2",
        "drweb": 1,
        "ext": "jpg",
        "file_id": "4ef1796ff0d09cfb75eaec0e461c70d8e8546d42e71c551c271e807532572c21",
        "hasPreview": true,
        "lPreview": "https://downloader.dst.yandex.net/preview/e098ee306c70f6c78c4839661aea7729da501971cfb5c0546a9edae4b061eb3b/inf/JtTECruX-ndLWCGMGlDA2e96lfCS9zRMCH9ce3IL8RlW7IdRSVJQfgIuZRQIofktVAAbQ-QLM3EI9yO9rX5B4g%3D%3D?uid=0&filename=080.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=L&crop=0",
        "mediatype": "image",
        "mimetype": "image/jpeg",
        "original": "https://downloader.dst.yandex.net/disk/2b14868d87085e21d7f115dc3471863428941aa1d4ce55f91298fa35f864d726/5a98125b/KykVhwsj8NwStUgHCaP5DL_kOM6cYE_X2bXwNO7xij8PvTR7mX5i-bKIQXa2Bb_SlyEfPLscN3UWDSMd5dFGEw%3D%3D?uid=0&filename=080.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&fsize=71810&hid=a7fd7eeb057807f1c760630514ce430b&media_type=image&tknv=v2&etag=5da928b2d27f54e837c5f247289bd8ca",
        "size": 71810,
        "xxxlPreview": "https://downloader.dst.yandex.net/preview/e098ee306c70f6c78c4839661aea7729da501971cfb5c0546a9edae4b061eb3b/inf/JtTECruX-ndLWCGMGlDA2e96lfCS9zRMCH9ce3IL8RlW7IdRSVJQfgIuZRQIofktVAAbQ-QLM3EI9yO9rX5B4g%3D%3D?uid=0&filename=080.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=XXXL&crop=0",
      },
      "modified": 1519839501,
      "name": "080.jpg",
      "path": "/+dWODt1e4HskzD1QFVevBqJzbZ7bbHr4F3iI95rlqk=:/080.jpg",
      "timestamp": 1537190300000,
      "type": "file",
      "virus": false,
    },
    Object {
      "id": "3a2e07bae53e30b4f24e43980ee93fccffabcb2df9e898e68f1cdab3d552d30d",
      "isAvialableForVideoPlayer": false,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:3a2e07bae53e30b4f24e43980ee93fccffabcb2df9e898e68f1cdab3d552d30d",
          "public_resource": "4003079057:3a2e07bae53e30b4f24e43980ee93fccffabcb2df9e898e68f1cdab3d552d30d",
        },
        "defaultPreview": "https://downloader.dst.yandex.net/preview/4e2cbc0cbad770f96efbe7203743fa93921bc65b353a703831870927114dba1c/inf/Um6_rfbyRgIIW4bUDQVYPu96lfCS9zRMCH9ce3IL8RmXKHZlOw_1URX0xnZ3HeGWi_GTFs6g_v6AHqN6nYkDGA%3D%3D?uid=0&filename=081.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2",
        "drweb": 1,
        "ext": "png",
        "file_id": "3a2e07bae53e30b4f24e43980ee93fccffabcb2df9e898e68f1cdab3d552d30d",
        "hasPreview": true,
        "lPreview": "https://downloader.dst.yandex.net/preview/4e2cbc0cbad770f96efbe7203743fa93921bc65b353a703831870927114dba1c/inf/Um6_rfbyRgIIW4bUDQVYPu96lfCS9zRMCH9ce3IL8RmXKHZlOw_1URX0xnZ3HeGWi_GTFs6g_v6AHqN6nYkDGA%3D%3D?uid=0&filename=081.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=L&crop=0",
        "mediatype": "image",
        "mimetype": "image/png",
        "original": "https://downloader.dst.yandex.net/disk/17aadbc50352030d0466ecdc7fa4a98787a35ebc51c86dc9e00e5b26ab3ac64f/5a98125b/fukAXKdoW7BihLB6y25xGVvt4uHIBQfxZAvDXfVNVZ3KNxIATITlaQoBYA-r6cxLV3LgZ2AjY_bmFpfwqoatXA%3D%3D?uid=0&filename=081.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&fsize=217870&hid=68dc53c2b9d32661cfe4fb1ed74de138&media_type=image&tknv=v2&etag=4c4ef63ac6e4f33d0bd29c0dcf4dc4da",
        "size": 217870,
        "xxxlPreview": "https://downloader.dst.yandex.net/preview/4e2cbc0cbad770f96efbe7203743fa93921bc65b353a703831870927114dba1c/inf/Um6_rfbyRgIIW4bUDQVYPu96lfCS9zRMCH9ce3IL8RmXKHZlOw_1URX0xnZ3HeGWi_GTFs6g_v6AHqN6nYkDGA%3D%3D?uid=0&filename=081.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&tknv=v2&size=XXXL&crop=0",
      },
      "modified": 1519839501,
      "name": "081.png",
      "path": "/+dWODt1e4HskzD1QFVevBqJzbZ7bbHr4F3iI95rlqk=:/081.png",
      "timestamp": 1537190300000,
      "type": "file",
      "virus": false,
    },
    Object {
      "id": "6b8395d3e04beccb4eebd34f2ceea5c905233c8b3a818702f34ee8f32a7f8b42",
      "isAvialableForVideoPlayer": false,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:6b8395d3e04beccb4eebd34f2ceea5c905233c8b3a818702f34ee8f32a7f8b42",
          "public_resource": "4003079057:6b8395d3e04beccb4eebd34f2ceea5c905233c8b3a818702f34ee8f32a7f8b42",
        },
        "defaultPreview": "https://downloader.dst.yandex.net/preview/2bf7f7625e1814071b85e3e298caf30553b8361fc2fb4c2754f25ac3103bcad7/inf/T8hU89KUQmQ_Dp3gMzPKW7_kOM6cYE_X2bXwNO7xij8uVUQDvqw79oZS9ACYv5S_etqzR4pywOha_5G7UFHgBg%3D%3D?uid=0&filename=082.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2",
        "drweb": 1,
        "ext": "jpg",
        "file_id": "6b8395d3e04beccb4eebd34f2ceea5c905233c8b3a818702f34ee8f32a7f8b42",
        "hasPreview": true,
        "lPreview": "https://downloader.dst.yandex.net/preview/2bf7f7625e1814071b85e3e298caf30553b8361fc2fb4c2754f25ac3103bcad7/inf/T8hU89KUQmQ_Dp3gMzPKW7_kOM6cYE_X2bXwNO7xij8uVUQDvqw79oZS9ACYv5S_etqzR4pywOha_5G7UFHgBg%3D%3D?uid=0&filename=082.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=L&crop=0",
        "mediatype": "image",
        "mimetype": "image/jpeg",
        "original": "https://downloader.dst.yandex.net/disk/8db6d7e341ba7725863f926777800ca1306e61a3ebeef0a68ab60fc5817a223e/5a98125b/_vqI6O1bTTATHP-Sm4pxob_kOM6cYE_X2bXwNO7xij-92HrKi_qIbb9UXdMUSwqY-wKl80VUPZLxWVyEFugf1A%3D%3D?uid=0&filename=082.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&fsize=816673&hid=e556556d54b9e56db0833583c5a07723&media_type=image&tknv=v2&etag=f1644a1cdac0b92cad68874fbccf097e",
        "size": 816673,
        "xxxlPreview": "https://downloader.dst.yandex.net/preview/2bf7f7625e1814071b85e3e298caf30553b8361fc2fb4c2754f25ac3103bcad7/inf/T8hU89KUQmQ_Dp3gMzPKW7_kOM6cYE_X2bXwNO7xij8uVUQDvqw79oZS9ACYv5S_etqzR4pywOha_5G7UFHgBg%3D%3D?uid=0&filename=082.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=XXXL&crop=0",
      },
      "modified": 1519839501,
      "name": "082.jpg",
      "path": "/+dWODt1e4HskzD1QFVevBqJzbZ7bbHr4F3iI95rlqk=:/082.jpg",
      "timestamp": 1537190300000,
      "type": "file",
      "virus": false,
    },
    Object {
      "id": "897547e66a4343e805a100f84b5a4febe284a5f0a4405518ff39c26e736fd7b6",
      "isAvialableForVideoPlayer": false,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:897547e66a4343e805a100f84b5a4febe284a5f0a4405518ff39c26e736fd7b6",
          "public_resource": "4003079057:897547e66a4343e805a100f84b5a4febe284a5f0a4405518ff39c26e736fd7b6",
        },
        "defaultPreview": "https://downloader.dst.yandex.net/preview/816ee2d0a0621964d37adc08d7101df2eb666e4e65c74e8c9198ca13c2f1b766/inf/QUkv8dmYAg1QANWT7fSzUlvt4uHIBQfxZAvDXfVNVZ1YMsVSO3Qmh5-Hfkf0ivCVKfg1iZHmBkLMMmc7tyzmuA%3D%3D?uid=0&filename=083.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2",
        "drweb": 1,
        "ext": "jpg",
        "file_id": "897547e66a4343e805a100f84b5a4febe284a5f0a4405518ff39c26e736fd7b6",
        "hasPreview": true,
        "lPreview": "https://downloader.dst.yandex.net/preview/816ee2d0a0621964d37adc08d7101df2eb666e4e65c74e8c9198ca13c2f1b766/inf/QUkv8dmYAg1QANWT7fSzUlvt4uHIBQfxZAvDXfVNVZ1YMsVSO3Qmh5-Hfkf0ivCVKfg1iZHmBkLMMmc7tyzmuA%3D%3D?uid=0&filename=083.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=L&crop=0",
        "mediatype": "image",
        "mimetype": "image/jpeg",
        "original": "https://downloader.dst.yandex.net/disk/ca01f16a7b25ee26330433c08fd51a249a08fbd4691503433afb946d758ca060/5a98125b/bxFcZR0WYS5gcol_uIgn5Vvt4uHIBQfxZAvDXfVNVZ3j5OG2bkECYpaZ8aabdBkFXlK3oM8hsXn1C77TGUOTaw%3D%3D?uid=0&filename=083.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&fsize=49713&hid=25df95ddc8cda8d752403508a591afca&media_type=image&tknv=v2&etag=ebcf59d1ad54744ab1ece45e342febe5",
        "size": 49713,
        "xxxlPreview": "https://downloader.dst.yandex.net/preview/816ee2d0a0621964d37adc08d7101df2eb666e4e65c74e8c9198ca13c2f1b766/inf/QUkv8dmYAg1QANWT7fSzUlvt4uHIBQfxZAvDXfVNVZ1YMsVSO3Qmh5-Hfkf0ivCVKfg1iZHmBkLMMmc7tyzmuA%3D%3D?uid=0&filename=083.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=XXXL&crop=0",
      },
      "modified": 1519839501,
      "name": "083.jpg",
      "path": "/+dWODt1e4HskzD1QFVevBqJzbZ7bbHr4F3iI95rlqk=:/083.jpg",
      "timestamp": 1537190300000,
      "type": "file",
      "virus": false,
    },
    Object {
      "id": "0b5455772c4b0c78cd34d8c428eec847dc3794a8aa7fd7e912b1ac0f9f07086b",
      "isAvialableForVideoPlayer": false,
      "meta": Object {
        "comment_ids": Object {
          "private_resource": "4003079057:0b5455772c4b0c78cd34d8c428eec847dc3794a8aa7fd7e912b1ac0f9f07086b",
          "public_resource": "4003079057:0b5455772c4b0c78cd34d8c428eec847dc3794a8aa7fd7e912b1ac0f9f07086b",
        },
        "defaultPreview": "https://downloader.dst.yandex.net/preview/b73e8ae83125f5a8653dc2f885be98a3b6770092e70aa886e4cd87fe26a20b2d/inf/KykVhwsj8NwStUgHCaP5DL_kOM6cYE_X2bXwNO7xij-jSpd0UFLluX9evPCgO9cMsmH-90KSL1oR1aqRIx5xjw%3D%3D?uid=0&filename=084.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2",
        "drweb": 1,
        "ext": "jpg",
        "file_id": "0b5455772c4b0c78cd34d8c428eec847dc3794a8aa7fd7e912b1ac0f9f07086b",
        "hasPreview": true,
        "lPreview": "https://downloader.dst.yandex.net/preview/b73e8ae83125f5a8653dc2f885be98a3b6770092e70aa886e4cd87fe26a20b2d/inf/KykVhwsj8NwStUgHCaP5DL_kOM6cYE_X2bXwNO7xij-jSpd0UFLluX9evPCgO9cMsmH-90KSL1oR1aqRIx5xjw%3D%3D?uid=0&filename=084.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=L&crop=0",
        "mediatype": "image",
        "mimetype": "image/jpeg",
        "original": "https://downloader.dst.yandex.net/disk/462bcee482e8afe362a9c152d61ed17a6821ca7b48c1671965fb03932477870a/5a98125b/_vqI6O1bTTATHP-Sm4pxoVvt4uHIBQfxZAvDXfVNVZ1qdaRxM2-CV-tJ9XhizNS4t-wI7La4lqHm4tfUwz6eeQ%3D%3D?uid=0&filename=084.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&fsize=603787&hid=f29474e9491001a2616603e0ca0df4cc&media_type=image&tknv=v2&etag=15f1c9f6f06e63bb4aeb17031cf4c94d",
        "size": 603787,
        "xxxlPreview": "https://downloader.dst.yandex.net/preview/b73e8ae83125f5a8653dc2f885be98a3b6770092e70aa886e4cd87fe26a20b2d/inf/KykVhwsj8NwStUgHCaP5DL_kOM6cYE_X2bXwNO7xij-jSpd0UFLluX9evPCgO9cMsmH-90KSL1oR1aqRIx5xjw%3D%3D?uid=0&filename=084.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=XXXL&crop=0",
      },
      "modified": 1519839502,
      "name": "084.jpg",
      "path": "/+dWODt1e4HskzD1QFVevBqJzbZ7bbHr4F3iI95rlqk=:/084.jpg",
      "timestamp": 1537190300000,
      "type": "file",
      "virus": false,
    },
  ],
}
`;
